tooltip align issue rectified

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -20,8 +20,10 @@ img {
   margin: 0px 0px 0px 10px;
   height: 1.5rem;
   width: 1.5rem;
+  font-size: 22px;
+  margin-bottom: 5px;
   &--none {
-    filter: invert(57%) sepia(0%) saturate(4%) hue-rotate(266deg) brightness(88%) contrast(89%);
+    filter: invert(50%) sepia(2%) saturate(2094%) hue-rotate(167deg) brightness(88%) contrast(85%);
   }
 }
 
@@ -30,17 +32,4 @@ img {
   filter: invert(88%) sepia(87%) saturate(3133%) hue-rotate(81deg) brightness(87%) contrast(78%);
 }
 
-// .sr-only {
-//   border: 0 !important;
-//   clip: rect(1px, 1px, 1px, 1px) !important; /* 1 */
-//   -webkit-clip-path: inset(50%) !important;
-//   clip-path: inset(50%) !important; /* 2 */
-//   height: 1px !important;
-//   margin: -1px !important;
-//   overflow: hidden !important;
-//   padding: 0 !important;
-//   position: absolute !important;
-//   width: 1px !important;
-//   white-space: nowrap !important; /* 3 */
-// }
 
